--- a/source/css/index.css
+++ b/source/css/index.css
@@ -3,3 +3,13 @@ header {
 
 main .row {
   padding: 50px; }
+#todocard{
+  height:500px;
+}
+#socialicon ul li {
+  list-style:none;
+  display:inline;
+  float:right;
+  margin-left:20px;
+
+}
