--- a/source/sass/_global.scss
+++ b/source/sass/_global.scss
@@ -9,3 +9,16 @@ main .row {
 #todo-action {
     float: right;
 }
+@media (max-width: 1253px) {
+    .topnav a {
+        float: none;
+        width: 100%;
+    }
+}
+#socialicon ul li{
+    list-style:none;
+    display:inline;
+    float:right;
+    margin:15px;
+
+}
