Refinement su css

--- a/source/sass/_global.scss
+++ b/source/sass/_global.scss
@@ -1,9 +1,9 @@
 header {
-    margin-bottom: 20px;
+    margin-bottom: 50px;
 }
 
 main .row {
-    padding: 50px;
+    padding: 0px 50px 20px 50px;
 }
 
 #todo-action {
