--- a/source/css/index.css
+++ b/source/css/index.css
@@ -1,9 +1,8 @@
 header {
-  margin-bottom: 20px; }
+  margin-bottom: 50px; }
 
 main .row {
-  padding: 50px; }
+  padding: 0px 50px 20px 50px; }
 
 #todo-action {
-  float: right; 
-}
+  float: right; }
