--- a/source/css/index.css
+++ b/source/css/index.css
@@ -14,3 +14,37 @@ header {
   display: inline;
   float: right;
   margin: 15px; }
+  .card {
+    min-height: 200px;
+    margin:0 auto;
+    margin-top:3%;
+}
+.row{
+  text-align:center;
+}
+
+.right_box {
+  -webkit-box-shadow: -2px 0px 2px 0px rgba(0,0,0,0.75);
+  -moz-box-shadow: -2px 0px 2px 0px rgba(0,0,0,0.75);
+  box-shadow: -2px 0px 2px 0px rgba(0,0,0,0.75);
+  }
+  
+  .card {
+  border-radius: 0 !important;
+  border: 0 none;
+  -webkit-box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.5);
+  -moz-box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.5);
+  box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.5);
+  margin-left: 1px;
+  margin-right: 1px;
+  }
+  
+  .card-img-top {
+  width: 100%;
+  border-radius: 0 !important;
+  }
+  
+  .card-columns {
+  padding-top: 15px;
+  }
+ 
