--- a/source/sass/_global.scss
+++ b/source/sass/_global.scss
@@ -16,12 +16,13 @@ main .row {
         width: 100%;
     }
 }
+
 #socialicon ul li{
     list-style:none;
     display:inline;
     float:right;
     margin:15px;
-
+}
 
 
 .td-center-content {
